...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GH_App" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Input user name" translatesAutoresizingMaskIntoConstraints="NO" id="sCZ-1a-rcs">
                                <rect key="frame" x="0.0" y="104" width="428" height="60"/>
                                <color key="backgroundColor" red="0.2352941036" green="0.1215686351" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="LdI-dy-985"/>
                                </constraints>
                                <color key="barTintColor" red="0.2352941036" green="0.1215686351" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="evO-Yj-n1z" secondAttribute="bottom" constant="10" id="qWl-3H-Gxe"/>
                            <constraint firstItem="evO-Yj-n1z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sHV-oI-KNR"/>
                            <constraint firstItem="sCZ-1a-rcs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yLb-aT-lY7"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="allUsersTable" destination="evO-Yj-n1z" id="1hd-L4-zax"/>
                        <outlet property="userSearchBar" destination="sCZ-1a-rcs" id="h2u-Kn-dAO"/>
                        <segue destination="ZK8-Ns-G3H" kind="show" identifier="showUser" id="E3d-uE-LFW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
