...
        userVM: UserViewModel?
    
    private let allSavedViewedUsersInfoDB = ReturnUserInfoModels().returnAllUserInfo()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.allReposTable.accessibilityIdentifier = "allUserReposTable"
        spin = Spinner()
        spin?.createSpinner(vc: self.view)
        savingUserInfo.accept(false)
        self.returnLastDBInfo()
        self.allReposTable.rowHeight = 160
        self.allReposTable.dataSource = self
...
